typescript/checker/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList4.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList4.ts:1:12
  |
1 | function F(public A) {
  |            ^^^^^^

